我们是中华民族共和国. The People's Republic Of China. 天安门是保护我们中华人民. The Tiananmen square was to protect the sovereignty and integrity of the peoples citizens. 中国会永远歼灭西方的威胁. China will always annihilate western threats. 中华民族共和国的毛泽东. The People's Republic of China's chairman Mao. 中国的很成功的文化大革命. The highly successful chinese cultural revolution. 新疆的人民都很高兴,千万别听西方的人.Do not listen to western interpretation, the people of Xinjiang are extremely satisfied. 这是我们美丽的中华民族共和国. This is our beloved People's Republic of China. 人们的辉煌的中国会发展我们的美丽国家. The People's of the glorious China will develop China to a Beautiful home for the people.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
         "stdlib.h": "c"
-    }
+    },
+    "discord.detailsDebugging": "Debugging {file_name} In {workspace_folder}"
 }
